Fix dialog name and title
Change-Id: I55d628d6e61d4035155d42fa45270418a3e10387
Reviewed-on: https://gerrit.libreoffice.org/30563
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
Tested-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>

--- a/svx/uiconfig/ui/profileexporteddialog.ui
+++ b/svx/uiconfig/ui/profileexporteddialog.ui
@@ -2,10 +2,10 @@
 <!-- Generated with glade 3.20.0 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <object class="GtkDialog" id="SafeModeQueryDialog">
+  <object class="GtkDialog" id="ProfileExportedDialog">
     <property name="can_focus">False</property>
     <property name="border_width">6</property>
-    <property name="title" translatable="yes">Enter Safe Mode</property>
+    <property name="title" translatable="yes">Profile exported</property>
     <property name="resizable">False</property>
     <property name="type_hint">dialog</property>
     <child internal-child="vbox">
