--- a/cui/uiconfig/ui/optchartcolorspage.ui
+++ b/cui/uiconfig/ui/optchartcolorspage.ui
@@ -26,7 +26,7 @@
             <property name="top_padding">6</property>
             <property name="left_padding">12</property>
             <child>
-              <object class="svxlo-ColorLB" id="colors:border">
+              <object class="cuilo-ColorLB" id="colors:border">
                 <property name="dropdown">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
