tdf#92160 - sc: limit search results to 1000 entries.
Very large replace results give huge space consumption in the
display widget, and are of dubious usefulness.

Change-Id: Ib8ad01a673ea52976befaf958f8f695aca2190ae
Reviewed-on: https://gerrit.libreoffice.org/30574
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Tested-by: Michael Meeks <michael.meeks@collabora.com>

--- a/sc/uiconfig/scalc/ui/searchresults.ui
+++ b/sc/uiconfig/scalc/ui/searchresults.ui
@@ -53,6 +53,13 @@
             <property name="position">1</property>
           </packing>
         </child>
+        <child>
+          <object class="GtkLabel" id="skipped">
+            <property name="visible">False</property>
+            <property name="can_focus">False</property>
+            <property name="label" translatable="yes">skipped $1 ...</property>
+          </object>
+        </child>
       </object>
     </child>
     <action-widgets>
