--- a/svx/uiconfig/ui/colorwindow.ui
+++ b/svx/uiconfig/ui/colorwindow.ui
@@ -13,7 +13,7 @@
     <property name="can_focus">False</property>
     <property name="margin_right">6</property>
     <property name="xalign">0</property>
-    <property name="pixbuf">cmd/sc_square_unfilled.png</property>
+    <property name="pixbuf">cmd/sc_colorsettings.png</property>
     <property name="icon_size">1</property>
   </object>
   <object class="GtkImage" id="none_icon">
