tdf#103146 Revamp Extension Manager Dialog, Part 2
Move the "Remove" button which was customly implemented
from the ExtBoxWithBtns_Impl to the new row. This should
also solve some accessibility issues.

Also wipe some useless code which implements custom
tab behavior.

Change-Id: I602fcf23631498145d8b9ead2936ee549caf3f0d
Reviewed-on: https://gerrit.libreoffice.org/30867
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>

--- a/desktop/uiconfig/ui/extensionmanager.ui
+++ b/desktop/uiconfig/ui/extensionmanager.ui
@@ -125,7 +125,8 @@
                 </child>
                 <child>
                   <object class="GtkButton" id="removebtn">
-                    <property name="label" translatable="yes">Remove</property>
+                    <property name="label" translatable="yes">_Remove</property>
+                    <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="use_underline">True</property>
