screenshotannotation: Trim the textfield, add scrollbar
to prevent it from growing too large and thus distorting the dialog

Change-Id: Iaa27d3085ec314246565cae79ab7d627a94a3bff
Reviewed-on: https://gerrit.libreoffice.org/30898
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>

--- a/cui/uiconfig/ui/screenshotannotationdialog.ui
+++ b/cui/uiconfig/ui/screenshotannotationdialog.ui
@@ -100,11 +100,20 @@
           </packing>
         </child>
         <child>
-          <object class="GtkTextView" id="text">
-            <property name="name">text</property>
-            <property name="height_request">80</property>
+          <object class="GtkScrolledWindow" id="scrolledwindow1">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="hexpand">True</property>
+            <property name="vexpand">True</property>
+            <property name="shadow_type">in</property>
+            <child>
+              <object class="GtkTextView" id="text:border">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="hexpand">True</property>
+                <property name="vexpand">True</property>
+              </object>
+            </child>
           </object>
           <packing>
             <property name="expand">False</property>
