xmlsecurity: fix alignment for XAdES checkbox
And rename it to AdES, as the PDF PAdES generation will be affected by
this checkbox in the near future.

Change-Id: I06121e4eb9debac7a55a737a71780c2fa5c4d084
Reviewed-on: https://gerrit.libreoffice.org/30908
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Tor Lillqvist <tml@collabora.com>

--- a/xmlsecurity/uiconfig/ui/digitalsignaturesdialog.ui
+++ b/xmlsecurity/uiconfig/ui/digitalsignaturesdialog.ui
@@ -367,11 +367,12 @@
               </packing>
             </child>
             <child>
-              <object class="GtkCheckButton" id="xadescompliant">
-                <property name="label" translatable="yes">Use XAdES-compliant signature when there is a choice</property>
+              <object class="GtkCheckButton" id="adescompliant">
+                <property name="label" translatable="yes">Use AdES-compliant signature when there is a choice</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="halign">start</property>
               </object>
               <packing>
                 <property name="expand">False</property>
